welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:16: error: identifier expected but '(' found.
      setCouleurBrosse(T.(i))
                         ^